--- a/channel_html_sources/channel_10.html
+++ b/channel_html_sources/channel_10.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-30-j5fc0v80-v2/imageContent-30-j5fc0v80-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">TV9 Telugu</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => 2 States</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Political Mirchi</div>
 </div>
 
 <div id="jwplayerDiv"></div>
