--- a/channel_html_sources/channel_369.html
+++ b/channel_html_sources/channel_369.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11514-j9jtp5tk-v1/imageContent-11514-j9jtp5tk-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Jalsha Movies HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Aschhe Abar Shabor</div>
 </div>
 
 <div id="jwplayerDiv"></div>
