--- a/channel_html_sources/channel_517.html
+++ b/channel_html_sources/channel_517.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-60927-kljn2znc-v1/imageContent-60927-kljn2znc-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Garv Gurbani</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Shabad Kirtan</div>
 </div>
 
 <div id="jwplayerDiv"></div>
