--- a/channel_html_sources/channel_504.html
+++ b/channel_html_sources/channel_504.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-56386-kfc14w60-v4/imageContent-56386-kfc14w60-m4.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Shirdi Sai Baba</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Samadhi - Temple Closed</div>
 </div>
 
 <div id="jwplayerDiv"></div>
