--- a/channel_html_sources/channel_544.html
+++ b/channel_html_sources/channel_544.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-65443-kty2tkwo-v2/imageContent-65443-kty2tkwo-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Tata Play Videshi Kahaniyan</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Gaus Electronics</div>
 </div>
 
 <div id="jwplayerDiv"></div>
