--- a/channel_html_sources/channel_409.html
+++ b/channel_html_sources/channel_409.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-12252-j9qrkgu8-v3/imageContent-12252-j9qrkgu8-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">News State UP Uttarakhand</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Har Shahar Ki Khabar</div>
 </div>
 
 <div id="jwplayerDiv"></div>
